# MagicBetaClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  a.out  build.go
.github/: copilot-instructions.md
android-project/: .gitignore
android-project/app/: build.gradle
assets/: .gitignore
buildscripts/lib/arm-linux-androideabi/cmake/boringssl/: boringsslConfig.cmake
buildscripts/lib/arm-linux-androideabi/cmake/curl/: curlConfig.cmake
cmd/: .gitmodules  build.go  downloadCurlAar.sh  fetch-mojang-assets.sh  generateAndroidBuildscripts.sh
cmd/assetIDgen/: asset_id.go.tmpl  main.go
scripts/: build.go  fetch-mojang-assets.sh
src/: README.md  app.c  config.txt  core.h  easy_memory.c  go.mod  go.sum  main.go  math_include.h  network-thread.c
src/cfg/: cfg.go
src/game/: config.go  default_texture_pack.go  game.go  game.h  screen_connect_server.go  screen_ingame.go  screen_join_server.go  screen_menu_main.go  screen_select_server.go  sounds.go  state.c  state.h  texturePack.go  types.go  ui_main_menu.go
src/gfx/: camera.c  camera.go  camera.h  gfx.go  gfx.h  gfx_decls.h  math.go  math_methods.go  render.h  renderer.c  rlgl.c  rlgl.h  typedefs.go
src/gfx/assets/: asset_id.go
src/gfx/gl/: gl.go
src/gui/: button.go  gui.go  minecraftLogo.go  textField.go
src/json/: cjson.c  cjson.h  json.go
src/mc/: mc.h  network-thread.c  network-thread.h  packet.c  packet.h  read-packet.c  write-packet.c
src/mix/: mix.go
src/net/: conn.c  conn.go  curl.c  net.h  steppedReader.go
src/net/curl/: curl.c  curl.go  curl.h
src/net/mc/: conn.go  packet.go  packet_id.go  packetid_string.go  protocol.go
src/sdl/: app.h  defines.go  enums.go  event.go  sdl3.go  sdl_enums_events.go  sdl_enums_gamepad_button.go  sdl_enums_glattr.go  sdl_enums_keycodes.go  sdl_enums_scancodes.go
